# Physical-AI-Humanoid-Robotics-Textbook

./: .gitignore  DEPLOYMENT.md  DEPLOYMENT_URDU.md  README.md  package-lock.json  vercel.json
.specify/memory/: constitution.md
backend/: .env.example  app_gradio.py  pyproject.toml  render.yaml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/models/: schemas.py
backend/app/routers/: chat.py
backend/app/services/: embedding_service.py  rag_service.py
backend/scripts/: embed_content.py
frontend/: .env.example  docusaurus.config.js  package-lock.json  package.json  sidebars.js  tsconfig.json
frontend/docs/: glossary.mdx  index.mdx
frontend/docs/01-intro-physical-ai/: index.mdx
frontend/docs/02-humanoid-basics/: index.mdx
frontend/docs/03-ros2-fundamentals/: index.mdx
frontend/docs/04-digital-twin/: index.mdx
frontend/docs/05-vla-systems/: index.mdx
frontend/docs/06-capstone/: index.mdx
frontend/docs/_partials/: author.md
frontend/docs/conclusion/: future-of-physical-ai.md
frontend/docs/module-1-ros2/: index.md
frontend/docs/module-2-digital-twin/: index.md
frontend/docs/module-3-ai-brain/: index.md
frontend/docs/module-4-vla/: index.md
frontend/docs/module-5-rl-locomotion/: index.md
frontend/docs/module-6-sensor-fusion/: index.md
frontend/docs/overview/: introduction.md  preface.md
frontend/src/components/ChatWidget/: ChatWidget.js  (+1 more)
frontend/src/css/: custom.css
frontend/src/theme/: Root.js
huggingface-space/: README.md  app.py
specs/textbook-generation/: plan.md  spec.md  tasks.md
(+5 files in other folders)
